feat(whitelist): implement apply and verify processes with enhanced data handling and IP location caching